--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Greece
 
   Painted by John Fulleylove; described by J.A. McClymont'
